force-app/main/default/objects/Form_Connection_Field__c/Form_Connection_Field__c.object-meta.xml
<CustomObject>
    <label>Clarity Form Connection Field</label>
    <nameField>
        <label>Clarity Form Connection Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clarity Form Connection Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>