force-app/main/default/objects/Form_Connection_Field__c/fields/Form_Connection__c.field-meta.xml
<CustomField>
    <fullName>Form_Connection__c</fullName>
    <label>Clarity Form Connection</label>
    <referenceTo>Form_Connection__c</referenceTo>
    <relationshipLabel>Form Connection Fields</relationshipLabel>
    <relationshipName>Form_Connection_Fields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>