force-app/main/default/objects/Form_Connection_Field__c/fields/PreFill__c.field-meta.xml
<CustomField>
    <fullName>PreFill__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PreFill</label>
    <type>Checkbox</type>
</CustomField>