force-app/main/default/objects/Form_Connection_Field__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clarity Form Question</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>Form Connection Fields</relationshipLabel>
    <relationshipName>Form_Connection_Fields</relationshipName>
    <type>Lookup</type>
</CustomField>